--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  margin-top: 150px;
   font-family: cursive;
   display:flex;
   justify-content:center;
@@ -16,3 +17,19 @@ body {
 #title{
   text-align: center;
 }
+
+.submitBTN{
+  text-align: center;
+}
+
+.centerBTN{
+  text-align: center;
+}
+
+.centerName{
+  text-align: center;
+}
+.centerDetails{
+  text-align: center;
+}
+
